<resources>
    <string name="app_name">eShop Admin Panel</string>
    <string name="welcome_back">Welcome back</string>
    <string name="add_categories">Add Categories</string>
    <string name="add_banner">Add Banner</string>
    <string name="order_details">Order Details</string>
    <string name="add_products">Add Products</string>
    <string name="logout">Logout</string>
    <string name="add_product">Add Product</string>
    <string name="select_category">Select Category</string>
</resources>